[project]
name = "rag-implementation-ahanamantra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "openai>=2.40.0",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
]
